# cofluctuate-bold-glm

./: README.md  setup.cfg
cofluctuate-bold-glm/: __init__.py  edge_label_masker.py  utils.py
cofluctuate_bold_glm/: edge_label_masker.py  edge_seed_masker.py  utils.py
