[metadata]
name = cofluctuate_bold_glm
author = Javier Rasero
author_email = jrasero.daparte@gmail.com
version = 0.0.0
description = A package to compute cofluctuating times series from task-bold fmri data
url = https://github.com/jrasero/cofluctuate-bold-glm

[options]
packages = find:
install_requires =
nilearn >=0.7.0


